--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
         </section>
         <section class="section3">
             <h2>Locations</h2>
-            <div>
-                <div>
+            <div class="boss">
+                <div class="box">
                     <h3>Downtown</h3>
                     <p>384 West 4th St</p>
                     <p>Suite 108</p>
                     <p>Portland, Maine</p>
                 </div>
-                <div>
+                <div class="box">
                     <h3>East Bayside</h3>
                     <p>3433 Phisherman's Avenue</p>
                     <p>(Northwest Corner)</p>
                     <p>Portland, Maine</p>
                 </div>
-                <div>
+                <div class="box">
                     <h3>Oakdale</h3>
                     <p>515 Crescent Avenue</p>
                     <p>Second Floor</p>
